--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {
     "should": "^3.1.3",
     "mocha": "^1.17.1",
-    "async": "^0.2.10"
+    "async": "^0.2.10",
+    "istanbul": "^0.2.6"
   },
   "scripts": {
     "test": "make test"
