--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stash",
-  "version": "0.0.1",
+  "name": "node-stash",
+  "version": "0.0.4",
   "description": "Distributed cache using Redis and in-memory LRU",
   "main": "lib/stash.js",
   "directories": {
@@ -8,10 +8,11 @@
   },
   "dependencies": {
     "debug": "~0.7.4",
-    "node-redis-warlock": "0.0.2",
-    "anchorman": "0.0.1",
+    "node-redis-warlock": "0.0.4",
+    "node-anchorman": "0.0.3",
     "redis": "^0.10.1",
-    "extend": "^1.2.1"
+    "extend": "^1.2.1",
+    "node-rush": "0.0.3"
   },
   "devDependencies": {
     "should": "^3.1.3",
