--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node-anchorman": "0.0.3",
     "redis": "^0.10.1",
     "extend": "^1.2.1",
-    "node-rush": "0.0.3"
+    "memoizee": "^0.3.3"
   },
   "devDependencies": {
     "should": "^3.1.3",
