--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "debug": "~0.7.4",
     "node-redis-warlock": "0.0.6",
     "node-anchorman": "0.0.3",
-    "redis": "^0.10.1",
     "extend": "^1.2.1",
     "memoizee": "^0.3.3"
   },
@@ -18,7 +17,8 @@
     "should": "^3.1.3",
     "mocha": "^1.17.1",
     "async": "^0.2.10",
-    "istanbul": "^0.2.6"
+    "istanbul": "^0.2.6",
+    "redis": "^0.10.3"
   },
   "scripts": {
     "test": "make test"
