--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "test"
   },
   "dependencies": {
-    "debug": "~0.7.4",
-    "node-redis-warlock": "0.0.6",
-    "node-anchorman": "0.2.0",
+    "debug": "^0.7.4",
+    "node-redis-warlock": "~0.0.7",
+    "node-anchorman": "^0.2.0",
     "extend": "^1.2.1",
     "memoizee": "^0.3.3"
   },
