--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "dependencies": {
     "debug": "^0.7.4",
-    "node-redis-warlock": "~0.0.7",
-    "node-anchorman": "^0.2.0",
-    "extend": "^1.2.1",
-    "memoizee": "^0.3.3"
+    "node-redis-warlock": "^0.0.7",
+    "node-anchorman": "^0.2",
+    "extend": "^1.2",
+    "memoizee": "^0.3"
   },
   "devDependencies": {
     "should": "^3.1.3",
