--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   },
   "devDependencies": {
     "async": "^0.2",
-    "mocha": "^1.17",
+    "mocha": "^5.2.0",
     "redis": "^0.12"
   },
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha --exit test"
   },
   "repository": {
     "type": "git",
