--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 node_js:
-- '0.12'
-- '0.10'
-- iojs
+  - stable
+  - '10'
+  - '8'
+  - '6'
 services:
-- redis
+  - redis
 notifications:
   slack:
     secure: W6HtfyuA6+jmzeAfVBFLe1VFSF/vQZp8nyYQgM0rAG3beNU3gGzTq21dQc0flLFXarw3MFNkF//XP0hjQB4OMYrzVP7DeGLAycNDgpijEnPkct8LY9r+MrJ8HAw+wF/A05/cy/MZTK39ZrYFLlHPiX3w8h+EIFjuNr+6zUgRftM=
